more seperation of app from app frame

--- a/apps/delight/app.html
+++ b/apps/delight/app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en" dir="rtl" xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -15,6 +15,10 @@
 		<script type="module" src="app.js"></script>
 
 		<template id="app-template">
+			<slot></slot>
+		</template>
+
+		<template id="application-frame-template">
 			<style>
 				#application-frame {
 					display: grid;
@@ -38,9 +42,9 @@
 			</style>
 			<div id="application-frame">
 				<header>
-					<slot name="header" id="user"><span>Not Loaded yet</span></slot>
+					<slot name="header" id="user" part="header"><span>Not Loaded yet</span></slot>
 				</header>
-				<main>
+				<main part="pages">
 					<slot name="pages"><span>Not Loaded yet</span></slot>
 				</main>
 			</div>
@@ -75,48 +79,86 @@
 				<img src="" alt="">
 		</template>
 
+		<template id="pager-template">
+			<style></style>
+			<slot name="pages"></slot>
+		</template>
+
+		<template id="icon-template">
+			<style></style>
+			<img src="" alt />
+		</template>
+
+		<template id="label-template">
+			<label part="label"><slot></slot></label>
+		</template>
+
+		<template id="button-template">
+			<style>
+			</style>
+			<button part="button">
+				<c-icon id="icon" type="" name=""></c-icon>
+				<c-label id="label"><slot></slot></c-label>
+			</button>
+		</template>
+
+
 	</head>
 	<body class="brandC anon">
-		<c-application href="app.v0.json">
-			<c-application-bar slot="header">
-				<c-button id="burgerMenuButton" slot="menu">🍔</c-button>
+		<c-application href="app.v0.json" state="loading">
+			<c-application-frame>
+				<c-application-bar slot="header">
+					<c-button id="burgerMenuButton" slot="menu">🍔</c-button>
 
-				<ul id="featureNavList" slot="navigation">
-					<li>Feature A</li>
-					<li>Feature B</li>
-				</ul>
+					<ul id="featureNavList" slot="navigation">
+						<li>Feature A</li>
+						<li>Feature B</li>
+					</ul>
 
-				<c-user-account slot="secondaryMenu" name="">
-					<c-button id="logoutButton" slot="logout" type="icon">
-						<c-face id="userFace" avatar="" name="" size="medium"></c-face>
-					</c-button>
-					<a href="https://github.com/login/oauth/authorize?scope=user&client_id=86bb02292e0e29cc1ae6&state=37" id="loginButton" kind="text" slot="login">Login</a>
-				</c-user-account>
-			</c-application-bar>
+					<c-user-account slot="secondaryMenu" name="">
+						<!-- <c-button id="logoutButton" slot="logout" type="icon">
+							<c-face id="userFace" avatar="" name="" size=""></c-face>
+						</c-button> -->
+						<a href="https://github.com/login/oauth/authorize?scope=user&client_id=86bb02292e0e29cc1ae6&state=37" id="loginButton" kind="text" slot="login">Login</a>
+						<svg slot="login"
+							fill="black"
+							role="img"
+							viewBox="0 0 24 24"
+							width="1em"
+							height="1em"
+							xmlns="http://www.w3.org/2000/svg">
 
-			<c-panel slot="pannel">
-			</c-panel>
+							<path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12" />
+						</svg>
+					</c-user-account>
+				</c-application-bar>
 
-			<content slot="pages" id="anon">
-				Identify yourself
-			</content>
+				<c-panel slot="pannel">
+				</c-panel>
 
-			<content slot="pages" id="new_user">
-				Welcome, start the questions...
-				<form target="">
-					<input type="text"></form>
+				<c-pager id="statePager">
+					<content slot="pages" id="anon">
+						Identify yourself
+					</content>
 
-					<input type="submit"></input>
-				</form>
-			</content>
+					<content slot="pages" id="welcome_user">
+						Welcome, start the questions
+						<form target="">
+							<input type="text"></form>
 
-			<content slot="pages" id="questions">
-				now is the time for all good men to come to the aid of thier fellow man
-			</content>
+							<input type="submit"></input>
+						</form>
+					</content>
 
-			<content slot="pages" id="home">
-				Home at last
-			</content>
+					<content slot="pages" id="questions">
+						now is the time for all good men to come to the aid of thier fellow man
+					</content>
+
+					<content slot="pages" id="home">
+						Home at last
+					</content>
+				</c-pager>
+			</c-application-frame>
 		</c-application>
 	</body>
 </html>
