extra bits before final breakdown

--- a/apps/delight/app.html
+++ b/apps/delight/app.html
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" type="text/css" href="../../theme/themes.css"></link>
 		<link rel="stylesheet" type="text/css" href="app.css"></link>
 
-		<meta name="google-signin-client_id" content="125198571672-of8qm8gjve36aqknklr04eh0h24n068o.apps.googleusercontent.com">
+		<!-- <meta name="google-signin-client_id" content="125198571672-of8qm8gjve36aqknklr04eh0h24n068o.apps.googleusercontent.com">
 		<script src="https://apis.google.com/js/platform.js" async defer></script>
 		<script>
 			//
@@ -24,7 +24,7 @@
 				console.log('Image URL: ' + profile.getImageUrl());
 				console.log('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
 			}
-		</script>
+		</script> -->
 
 		<script type="module" src="app.js"></script>
 
@@ -159,7 +159,7 @@
 							Login with github
 						</a>
 
-						<div class="g-signin2" data-onsuccess="onSignIn"></div>
+						<!-- <div class="g-signin2" data-onsuccess="onSignIn"></div> -->
 					</c-page>
 
 					<c-page id="welcome_user" name="welcom_user">
